# beak-design

./: .cta.json  .gitignore  AGENTS.md  AI_SETTINGS_REFACTOR.md  CHANGES.md  IMPLEMENTATION_SUMMARY.md  MCP_EXAMPLES.md  MCP_STDIO_IMPLEMENTATION.md  PRD.md  QUICK_REFERENCE.md  README.md  TEMPLATE_SYSTEM_IMPLEMENTATION.md  inspire.txt  package.json  pnpm-lock.yaml  verify-implementation.sh  vite.config.ts
.cursor/: mcp.json
.cursor/plans/: reverse_engineering_plan_67be583d.plan.md
docs/: 00-architecture-overview.md  01-agent-integration.md  02-mcp-tools.md  03-canvas-system.md  04-command-bus.md  05-tool-context-provider.md  06-batch-design-processor.md  07-storage-database.md  08-local-agent-integration.md  09-quick-start-guide.md  10-tauri-backend.md  11-template-system.md  12-connection-manager.md  CHANGELOG.md  README.md
reverse-engineer/: app.js  claude.js  config.js  constants.js  desktop-mcp-adapter.js  desktop-resource-device.js  ipc-electron.js  main.js  menu.js  preload.js  tsconfig.tsbuildinfo  updater.js
reverse-engineer/data/: pencil-halo.pen?raw  pencil-lunaris.pen?raw  pencil-new.pen?raw  pencil-nitro.pen?raw  pencil-shadcn.pen?raw  pencil-welcome-desktop.pen?raw  pencil-welcome.pen?raw
reverse-engineer/src/: App.tsx  (+4 more)
src/: env.ts  routeTree.gen.ts  styles.css
src-tauri/: BACKEND_API.md  Cargo.toml  README.md  Untitled.beaki  Uyababa.beaki  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: mcp_example.ts
src-tauri/src/: main.rs  main.rs.backup  ollama.rs  process_manager.rs
src-tauri/tests/: test_commands.rs
(+259 files in other folders)
