[package]
name = "beak-design"
version = "0.1.0"
description = "Beak Design - A design tool built with Tauri"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["fs", "rt", "sync", "process", "io-util"] }
dirs = "5.0"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }

[features]
# This feature is used for production builds or when `devPath` points to the production dist
custom-protocol = ["tauri/custom-protocol"]
